header section ready

--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Kuba</title>
+  <title>Kuba</title> 
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Noto+Sans+Georgian:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/slick.css">
   <link rel="stylesheet" href="css/style.css">
@@ -17,7 +20,31 @@
         <p class="header__text">Explore the world of Casas & Cadillacs</p>
       </div>
     </div>
-    <nav class="menu"></nav>
+    <nav class="menu">  
+      <ul class="menu__list"> 
+        <li class="menu__list-item"> 
+          <a class="menu__list-link" href="#">Резюме</a> 
+        </li>  
+        <li class="menu__list-item"> 
+          <a class="menu__list-link" href="#">Головна</a> 
+        </li> 
+        <li class="menu__list-item"> 
+          <a class="menu__list-link" href="#">Краєвид</a> 
+        </li> 
+        <li class="menu__list-item"> 
+          <a class="menu__list-link" href="#">Погода</a> 
+        </li> 
+        <li class="menu__list-item"> 
+          <a class="menu__list-link" href="#">Що робити</a> 
+        </li> 
+        <li class="menu__list-item"> 
+          <a class="menu__list-link" href="#">Резеденції</a> 
+        </li> 
+        <li class="menu__list-item"> 
+          <a class="menu__list-link" href="#">Фото</a> 
+        </li>
+      </ul>
+    </nav>
   </header>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
