start work reason section

--- a/index.html
+++ b/index.html
@@ -45,7 +45,48 @@
         </li>
       </ul>
     </nav>
-  </header>
+  </header>  
+  <section class="reason"> 
+     <h2 class="reason__title">Чому тобі сподобається відпустка на Кубі ?</h2> 
+     <p class="reason__text"> 
+       Куба завжди була приваблива. Я люблю її за її унікальність, 
+       креативність і дух виживання. Я люблю Кубу тому, що  
+       недивлячись на 60 років невдач, вона оптимістична і   
+       відкрита. Прогуляйтесь по вулиці з кубинським другом, і в  
+       одному кварталі ви отримаєте п'ять рукостискань, чотири поцілунки, три 
+       привітання. І принайні два запрошення в гості.
+     </p> 
+     <div class="reason__link"> 
+       <a href="#">Read More ››</a>
+     </div> 
+     <div class="reason__statistics">  
+
+       <div class="reason__statistics-item">  
+         <img class="reason__statistics-images" src="images/statistics-1.svg" alt="img"> 
+         <p class="reason__statistics-num">1,920</p> 
+         <p class="reason__statistics-text">Trips</p>
+       </div>   
+
+       <div class="reason__statistics-item"> 
+        <img class="reason__statistics-images" src="images/statistics-2.svg" alt="img"> 
+        <p class="reason__statistics-num">271</p> 
+        <p class="reason__statistics-text">Venues</p>
+      </div> 
+       
+      <div class="reason__statistics-item"> 
+        <img class="reason__statistics-images" src="images/statistics-3.svg" alt="img"> 
+        <p class="reason__statistics-num">3,321</p> 
+        <p class="reason__statistics-text">Tickets Sold</p>
+      </div> 
+       
+      <div class="reason__statistics-item"> 
+        <img class="reason__statistics-images" src="images/statistics-4.svg" alt="img"> 
+        <p class="reason__statistics-num">2,912</p> 
+        <p class="reason__statistics-text">Reviews</p>
+      </div>
+
+     </div>
+  </section>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="js/slick.min.js"></script>
