started working on about section

--- a/index.html
+++ b/index.html
@@ -88,6 +88,50 @@
   
       </div>
     </div>
+  </section> 
+  
+  <section class="about">
+    <div class="container">
+      <div class="container-content">
+        <h2 class="about__title">Куба - це ... </h2>
+        <p class="about__text">
+          Куба схожа на принца в плащі бідняка: за інколи хитикими фасадами затримується золота пилюка. Саме це робить
+          подорож тут
+          захоплюючою. В цій країні, застрягшій в часі і шокуюче економічне ембарго, яке тривало більше півстоліття, ви
+          можете попрощатись з повсякденням і
+          і очікувати неочікуваного.
+        </p>
+  
+        <div class="about__item">
+          <div class="about__box">
+            <h3 class="about__box-title">Історична спадщина</h3>
+            <p class="about__box-text">
+              Без сучасних втручань колоніальні
+              міста Куби не сильно змінились з тих пір, як
+              мушкітери пірати пересікали Карибський
+              басейн. Атмосфера і архітектура особливо
+              в Гавані, Тринідад і Камагуэй, де
+              дивовижні площі і потужні вулиці
+              розповідають казки про богатство і інтриги.
+            </p>
+          </div>
+        </div>
+  
+        <div class="about__item">
+          <div class="about__box">
+            <h3 class="about__box-title">Дивовижні пляжі</h3>
+            <p class="about__box-text">
+              Немає значення, зупинились ви в розкішному
+              готелі в Гавані чи досліджуєте сільську
+              місцевість Віньялес. Не пропустіть пляжний
+              курортний Варадеро, це пляжний рай
+              обов'язково треба розглядати як частину
+              ваших кубинських планів подорожі.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
   </section>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
