about section done

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
   <header class="header">
-    <div class="header__top">
+    <div class="header__top" style="background-image: url('images/top-bg.jpg')">
       <div class="header__top-inner">
         <h1 class="header__title">Куба</h1>
         <p class="header__text">Explore the world of Casas & Cadillacs</p>
@@ -48,7 +48,7 @@
   </header>  
   <section class="reasons">
     <div class="container section-line">
-      <h2 class="reason__title">Чому тобі сподобається відпустка на Кубі ?</h2>
+      <h2 class="reason__title title">Чому тобі сподобається відпустка на Кубі ?</h2>
       <p class="reason__text container-content">
         Куба завжди була приваблива. Я люблю її за її унікальність,
         креативність і дух виживання. Я люблю Кубу тому, що
@@ -93,7 +93,7 @@
   <section class="about">
     <div class="container">
       <div class="container-content">
-        <h2 class="about__title">Куба - це ... </h2>
+        <h2 class="about__title title">Куба - це ... </h2>
         <p class="about__text">
           Куба схожа на принца в плащі бідняка: за інколи хитикими фасадами затримується золота пилюка. Саме це робить
           подорож тут
@@ -102,7 +102,7 @@
           і очікувати неочікуваного.
         </p>
   
-        <div class="about__item">
+        <div class="about__item" style="background-image: url('images/about-1.jpg')">
           <div class="about__box">
             <h3 class="about__box-title">Історична спадщина</h3>
             <p class="about__box-text">
@@ -117,7 +117,7 @@
           </div>
         </div>
   
-        <div class="about__item">
+        <div class="about__item" style="background-image: url('images/about-2.jpg')">
           <div class="about__box">
             <h3 class="about__box-title">Дивовижні пляжі</h3>
             <p class="about__box-text">
@@ -130,6 +130,7 @@
             </p>
           </div>
         </div>
+  
       </div>
     </div>
   </section>
