photo section ready

--- a/index.html
+++ b/index.html
@@ -133,8 +133,25 @@
   
       </div>
     </div>
-  </section>
+  </section>   
 
+  <section class="photo">
+    <div class="container">
+      <h2 class="photo__title title">Куба в фото</h2> 
+      <p class="photo__text container-content"> 
+       Коли ви думаєте про Карибське море,ви, швидше за все, думаєте про Кубу. Це самотня акація, вималювана на фоні 
+       горизонту. Це сніжна гора яка майже на екваторі і в межах видимості сурових пустинь. Це  
+       гарна, покрита пальмами берегова лінія океану, це Велика рифова долина, яка колись погрожувала розірвати  
+       континент на частини, це і густі ліси, нагадуючі серце континенту.
+      </p> 
+      <div class="photo__slider"> 
+         <img class="photo__img" src="images/photo-slider.jpg" alt="kuba-photo"> 
+         <img class="photo__img" src="images/photo-slider-2.jpg" alt="kuba-photo"> 
+         <img class="photo__img" src="images/photo-slider-3.jpg" alt="kuba-photo">
+      </div>
+    </div>
+  </section>
+    
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="js/slick.min.js"></script>
   <script src="js/main.js"></script>
