header adaptive done

--- a/index.html
+++ b/index.html
@@ -20,7 +20,12 @@
         <p class="header__text">Explore the world of Casas & Cadillacs</p>
       </div>
     </div>
-    <nav class="menu">  
+    <nav class="menu">   
+      <div class="menu__btn"> 
+         <span></span> 
+         <span></span> 
+         <span></span>
+      </div>
       <ul class="menu__list"> 
         <li class="menu__list-item"> 
           <a class="menu__list-link" href="#">Резюме</a> 
@@ -46,7 +51,7 @@
       </ul>
     </nav>
   </header>  
-  <section class="reasons">
+  <!-- <section class="reasons">
     <div class="container section-line">
       <h2 class="reason__title title">Чому тобі сподобається відпустка на Кубі ?</h2>
       <p class="reason__text container-content">
@@ -226,7 +231,7 @@
         © 2022 Всі права захищені
       </div>
     </div>
-  </footer>
+  </footer> -->
     
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="js/slick.min.js"></script>
