reason section ready

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       </ul>
     </nav>
   </header>  
-  <!-- <section class="reasons">
+  <section class="reasons">
     <div class="container section-line">
       <h2 class="reason__title title">Чому тобі сподобається відпустка на Кубі ?</h2>
       <p class="reason__text container-content">
@@ -94,7 +94,7 @@
       </div>
     </div>
   </section> 
-  
+  <!-- 
   <section class="about">
     <div class="container">
       <div class="container-content">
