start adaptive work on footer

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
       </div>
     </div>
   </section> 
-  <!--
+  
   <footer class="footer"> 
     <div class="container"> 
       <div class="footer__items">  
@@ -233,8 +233,7 @@
         © 2022 Всі права захищені
       </div>
     </div>
-  </footer> -->
-    
+  </footer> 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="js/slick.min.js"></script>
   <script src="js/main.js"></script>
