landing page ready

--- a/index.html
+++ b/index.html
@@ -205,9 +205,10 @@
           <h5 class="footer__item-title">Деталі</h5>     
           <ul class="footer__item-list"><a class="footer__item-link" href="#">Бронювання</a></ul>  
           <ul class="footer__item-list"><a class="footer__item-link" href="#">Оплата</a></ul>  
-          <ul class="footer__item-list"><a class="footer__item-link" href="#"></a>Умоваи</ul>  
-          <ul class="footer__item-list"><a class="footer__item-link" href="#"></a>Політика</ul> 
-          <ul class="footer__item-list"><a class="footer__item-link" href="#"></a>Карта сайту</ul> 
+          <ul class="footer__item-list"><a class="footer__item-link" href="#">Умоваи</a></ul>  
+          <ul class="footer__item-list"><a class="footer__item-link" href="#">Політика</a></ul> 
+          <ul class="footer__item-list"><a class="footer__item-link" href="#">Карта сайту</a></ul> 
+          
         </div>  
          
         <div class="footer__item"> 
@@ -223,9 +224,9 @@
           <h5 class="footer__item-title">Блог</h5>     
           <ul class="footer__item-list"><a class="footer__item-link" href="#">Ідеї для фотосесії</a></ul>  
           <ul class="footer__item-list"><a class="footer__item-link" href="#">Весілля на Кубі</a></ul>  
-          <ul class="footer__item-list"><a class="footer__item-link" href="#"></a>ТОП 10 ресторанів Куби</ul>  
-          <ul class="footer__item-list"><a class="footer__item-link" href="#"></a>Цікаві місця Гаванни</ul> 
-          <ul class="footer__item-list"><a class="footer__item-link" href="#"></a>Кубинська кухня</ul> 
+          <ul class="footer__item-list"><a class="footer__item-link" href="#">ТОП 10 ресторанів Куби</a></ul>  
+          <ul class="footer__item-list"><a class="footer__item-link" href="#">Цікаві місця Гаванни</a></ul> 
+          <ul class="footer__item-list"><a class="footer__item-link" href="#">Кубинська кухня</a></ul> 
         </div>  
 
       </div> 
